Data Wrangling Assignment -- playing with (and ruining) dplyr

--- a/students/sparrow925.Rmd
+++ b/students/sparrow925.Rmd
@@ -41,3 +41,52 @@ Creating code that pushes graphs reflecting up-to-date datasets without doing mo
 #### <span style="color:red">**Data**</span>
         
 So far our group is only working with data samples given in RStudio, but as we evolve this quarter I'm excited to see what we dig up!
+
+***
+#### <span style="color:red">**Data Wrangling**</span>
+
+```{r}
+library(readr)
+library(dplyr)
+
+# setwd('students')
+# Hard to parse what head and summary are spitting out
+d = read.csv('./data/sparrow925_EUSO2.csv')
+head(d)
+summary(d)
+
+# Oh man the head and summary here are so much more usable
+d2 = read_csv('./data/sparrow925_EUSO2.csv')
+head(d2)
+summary(d2)
+```
+
+Let's ask ourselves, how many cities are measured for each country?
+
+```{r}
+# read in csv
+d = read_csv('./data/sparrow925_EUSO2.csv')
+# view data
+head(d)
+summary(d)
+# limit columns to country and city
+d2=d[,c('country_code','city_name')]
+# get count per country
+d3=aggregate(city_name ~ country_code, data=d2, FUN='length')
+# write out csv
+write.csv(d3, './data/sparrow925_EUSO2_citycount.csv', row.names = FALSE)
+```
+...There is a better way to format this...
+
+
+# read in csv
+#... be careful, there is something wrong here and it crashes R
+sparrow925_EUSO2_dplyr = read_csv('./data/sparrow925_EUSO2.csv')
+sparrow925_EUSO2_dplyr %T>%
+  glimpse() %>% # view 
+  select(country_code, city_name) %>% # limit columns
+  #filter(country_code='DE') %>% # limit rows
+  group_by(city_name) %>% # get count by grouping
+  summarize(n=n()) %>% # then summarize
+  write.csv('./data/sparrow925_EUSO2_citycount.csv')
+
