--- a/students/knboysen.Rmd
+++ b/students/knboysen.Rmd
@@ -62,7 +62,7 @@ print(subset[,c(1,3,15)])
 
 The mean percent of land under 5m is `r mean(na.omit(sea_level_unep_kb$Percent_land_under_5m))`%. 
 
-###Data Wrangling
+##Data Wrangling
 
 Install Packages
 ```{r, eval=F}
@@ -128,5 +128,167 @@ b=read_csv('C:/Users/Kristen/Documents/BREN/winter16/env_info/env-info/data/r-ec
   group_by(species_id, year) %>%
   summarize(count = n())
 
+```
+
+###elegance with dplry 
+week 3 individual assignment
+
+```{r}
+library(readr)
+library(dplyr)
+#read is csv
+surveys = read_csv('../data/r-ecology/surveys.csv')
+
+surveys %T>% ##tee operator is good for printing or plotting that wouldn't ouput a return usually
+  glimpse() %>%
+  select(species_id, year) %>% #selected columns
+  filter(species_id == 'NL') %>% ##with specific row entries
+  group_by(year) %>%
+  summarize(n=n()) %T>%  ##summarize n counts
+  glimpse() %>% ##view the table before writing it. it seems to work. 31 "NL" counts in 1977
+  write_csv('data/surveys_kboysen.csv') ##hooray it works!
+  
+  
+```
+
+###Wrangling Webinar
+####Piping
+```{r}
+library(tidyr)
+library(dplyr)
+
+select(tb, child:elderly) ##verses
+tb %>% select(child:elderly)
+
+#yay piping
+```
+
+```{r, echo= F}
+#library(devtools)
+#devtools::install_github("rstudio/EDAWR")
+#library(EDAWR)
+```
+###tidyr
+```{r}
+library(tidyr)
+##cases, a dataset about TB
+
+gather(cases, "year", "n", 2:4) ##cases is the dataframe we are reshaping, "year"/"n" are the new column names, and we are collapsing columns 2-4
+
+##the opposite function is "spread"
+#use "pollution" dataset
+
+spread(pollution, size, amount)
+#creates a new columns for each size (large & small), and populates it with the "amount"
+
+
+##separate!
+storms2<- separate(storms, date, c("year", "month", "day"), sep = "-") ##separates the date of the storm by the year month day (dash separates the original date) this is very cool
+
+##unite!
+unite(storms2, "date", year, month, day, sep = "-") ## put it back together again
+
+
+```
+
+###Dplyr
+
+```{r}
+library(nycflights13)
+
+###dplyr ways to access info
+##select() extracts variables
+##filter() extracts exisiting observations
+#mutate()  derive new variables
+##summarise() ##change the unit of analysis
+
+## - selects everything but
+## : selects range
+##contains, ends_with, everthing(), matches(), num_range(), one_of(), starts_with()
+
+filter(storms, wind>=50, 
+       storm %in% c("Alberto", "Alex", "Allison"))
+
+#mutate
+
+mutate(storms, ratio =pressure/wind)
+mutate(storms, ratio =pressure/wind, inverse= ratio^-1)
+#useful mutate functions
+
+mutate(storms, cummean(pressure)) ##creates new column with cummulative mean
+mutate(storms, percent_rank(wind)) ##ranks them 0-1
+mutate(storms, dense_rank(wind)) ##ranks them 1(low)-6
+mutate(storms, min_rank(wind))
+
+##window functions
+## i don't get these
+
+
+##summarise
+
+pollution %>% summarise(median=median(amount), variance=var(amount))
+
+pollution %>% summarise(mean= mean(amount), sum= sum(amount), n=n())
+
+##arrange() sorts data frame
+
+##desc makes it descending. default is ascending
+
+##piping again
+
+storms %>% filter(wind >=50) 
+#vs
+filter(storms, wind>=50)
+
+storms %>%
+  mutate(ratio = pressure/wind) %>%
+  select(storm, ratio)
+
+#ctrl shift m!
+
+# %>% 
+
+```
+##Unit of analysis
+
+```{r}
+#group by 
+pollution %>%  group_by(city)
+pollution %>%  group_by(city) %>% summarise(mean= mean(amount), sum= sum(amount), n=n())
+
+pollution %>%  group_by(size) %>% summarise(mean=mean(amount))
+
+pollution %>%  ungroup()
+
+##tb example
+
+```
+##joining data
+
+```{r}
+y<- data.frame(x1=c("a","b","c"), x2=(c(1,2,3)))
+y[] <- lapply(y, as.character)
+z<-data.frame(x1=c("b","c","d"),x2=(c(2,3,4)))
+
+z[] <- lapply(z, as.character)
+
+##is this the best way to change factors to characters?
+##are we losing info by changes the #s (x2) into characters?
+##bind_cols
+bind_cols(y,z)
+##bind_rows
+bind_rows(y,z)
+##Union
+union(y,z)
+##intersect
+intersect(y,z)
+##setdiff
+setdiff(y,z)
+
+##d doesn't show up here? 
+
+left_join(songs, artists, by="name")
+
+inner_join(songs, artists, by="name")
 ```
 
