--- a/students/julianaherrera.Rmd
+++ b/students/julianaherrera.Rmd
@@ -5,7 +5,7 @@ date: "January 19, 2016"
 output: html_document
 ---
 
-##Content
+## Content
 
 I'm very interested in the effects of markets over fisheries management. My Group Project is focused in answering the overarching question **_What are the consequences of applying seafood certification programs to 
 small-scale fisheries?_**, focusing on a Small scale fishery in Costa Rica. Our specific questions are: 
@@ -21,44 +21,49 @@ Link to CRSeafood webpage (http://www2.bren.ucsb.edu/~crseafood/)
 <div style="width:300px; height=300px">
 ![](http://www.laff.bren.ucsb.edu/sites/www.laff.bren.ucsb.edu/files/styles/main_people_image/public/images/people/IMGP0301.JPG?itok=0OZ2DSQM)
 
-##Techniques
+## Techniques
 
 In order to understand what affects the supply chain of snapper, we had to first map how is this system laid out. We did this through **_systems thinking_**. The following figure shows our preliminary results:
 
 <div style="width:1000px; height=700px">
-![](snappermap.png)
+![](images/julianaherrera_snappermap.png)
 
-##Data
+## Data
 
 Currently my team and I are working on developing a model that will show the effects of implementing a certification. We are evaluating these changes in terms of profits and biomass changes. 
 Learning how to use Github and applying it to the creation of this model would be a great advantage. We are currently cleaning and organizing the data obtained, therefore there are no preliminary results regarding the bio-economic model of snapper. However, here is a short example of some of the data we have available.
 
 ```{r}
 # read csv
-d = read.csv('pricessnapper.csv')
+d = read.csv('data/julianaherrera_pricessnapper.csv')
       
 # output summary
 summary(d)
 ```
+
 ## Data Wrangling
+
 ```{r}
-#Loading packages
+# loading packages
 library(readxl)
 library(dplyr)
 library(tidyr)
 library(readr)
 
-#Loading data
-pricedata <- read_csv('pricessnapper.csv') 
+# loading data
+pricedata <- read_csv('data/julianaherrera_pricessnapper.csv') 
   colnames(pricedata) <- tolower(colnames(pricedata))
 
-fishdata <- read_excel('catch.xlsx')
+fishdata <- read_excel('data/julianaherrera_catch.xlsx')
   colnames(fishdata) <- tolower(colnames(fishdata))
   
 # Changing columns and rows
 pricedata_2 <- pricedata[,c('year', 'fishery', 'price')] # limiting data to year, species and price only
-pricedata_3 <- pricedata_2[pricedata_2$fishery == 'Artisanal']  
-  
+
+pricedata_3 <- pricedata_2[pricedata_2$fishery == 'Artisanal'] 
+
+pricedata_4 <- aggregate(fishery ~ year, data = pricedata_3, FUN='length') # counts values per year
+
  #Reshaping data 
 tunadata<- (fishdata) %>%
   select(-total) %>%
