--- a/students/alxsmith.Rmd
+++ b/students/alxsmith.Rmd
@@ -70,42 +70,32 @@ plot(fishfactor, pch=15, col=rainbow(4), main="Fish Part Consumption")
 
 
 ##Data Wrangling
-```{r,eval=FALSE}
-setwd('.')
+
+```{r}
+#getwd()
+#setwd('students')
+
 
 list.files()
 
+list.files(pattern=glob2rx('*.png'))
 
-
+file.exists('test.png')
 ```
 
-#Install
 
+###Reading CSV
 ```{r}
-
-for (p inpkgs){
-  if(!require(p, character.only = T)){
-    installed.packages(p)
-  }
-}
-  }
-}
-
+d = read.csv('../data/r-ecology/species.csv')
+d
+head(d)
+summary(d)
+class(d$species_id)
+#factor
 ```
 
-```{r}
-#setwd("~/Documents/R/Informatics/env_info_page/students")
-#the '../ takes you back one file so to the data file in ev_info_page NOT the one in students
-#
-d1=read.csv('../data/r-ecology/species.csv')
-d1
-head(d1)
-summary(d1)
-class(d1$species_id)
-```
+###Reading CSV with readr
 
-
-##using readr
 ```{r}
 library(readr)
 
@@ -114,29 +104,24 @@ d
 head(d)
 summary(d)
 class(d$species_id)
-# the difference is it loaded as a charater rather than species
+
 
 ```
 
-##dplyr
-What year does species 'NL' show up in the surveys.csv
 ```{r}
-library(readr)
 library(dplyr)
 
-d = read_csv('../data/r-ecology/surveys.csv') %>%
-  tbl_df()
-# %>% says take this output and use it as input into the next function "piping"
+#read in csv
+surveys=read_csv('../data/r-ecology/surveys.csv')
 
-d = read_csv('../data/r-ecology/surveys.csv') %>%
-  select(species_id, year) %>%
-  #filter(species_id=='NL') %>%
-  group_by(species_id,year) %>%
-  summarize(count= n())
+#dplyr elegance
 
-d
-head(d)
-summary(d)
-glimpse(d)
+  surveys %T>%                       # note tee operator %T>% for glimpse
+  glimpse() %>%                       # view data
+  select(species_id, year) %>%        # limit columns
+  filter(species_id  == 'NL') %>%     # limit rows
+  group_by(year) %>%                  # get count by first grouping
+  summarize(n = n()) %>%              #   then summarize
+  write_csv('data/surveys_bbest.csv') # write out csv
 ```
 
