--- a/wk03_dplyr.Rmd
+++ b/wk03_dplyr.Rmd
@@ -297,5 +297,5 @@ The "tee" operator `%T>%` is similar to the "then" operator `%>%` in that the le
 
 ### Data Wrangling in R
 
-- [Data Wrangling (dplyr, readr) cheat sheet]({{ site.baseurl }}/refs/cheatsheets/data-wrangling-cheatsheet.pdf)
+- [Data Wrangling (dplyr, tidyr) cheat sheet]({{ site.baseurl }}/refs/cheatsheets/data-wrangling-cheatsheet.pdf)
 - [wrangling-webinar.pdf](wrangling-webinar.pdf)
