--- a/wk04_tidyr.Rmd
+++ b/wk04_tidyr.Rmd
@@ -340,5 +340,5 @@ sources:
 
 ### Data Wrangling in R
 
-- [Data Wrangling (dplyr, readr) cheat sheet]({{ site.baseurl }}/refs/cheatsheets/data-wrangling-cheatsheet.pdf)
+- [Data Wrangling (dplyr, tidyr) cheat sheet]({{ site.baseurl }}/refs/cheatsheets/data-wrangling-cheatsheet.pdf)
 - [wrangling-webinar.pdf](wrangling-webinar.pdf)
